feat: wire chat endpoint with agent service and OpenAI

--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,4 @@ OPENAI_API_KEY=sk-your-key
 CSV_HOST_DIR=./app/data
 CSV_CONTAINER_DIR=/app/data
 CSV_CATALOG_PATH=/app/data/catalog.csv
+VALUE_PROPOSITION_PATH=/app/data/value_proposition.md
