feat: agrega memoria Redis, parser NLP e intents al flujo del bot.

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,4 @@ CSV_HOST_DIR=./app/data
 CSV_CONTAINER_DIR=/app/data
 CSV_CATALOG_PATH=/app/data/catalog.csv
 VALUE_PROPOSITION_PATH=/app/data/value_proposition.md
+REDIS_URL=redis://redis:6379/0
